--- a/TraysFastUpdate/Components/Pages/Dialogs/DeleteDialog.razor
+++ b/TraysFastUpdate/Components/Pages/Dialogs/DeleteDialog.razor
@@ -15,7 +15,7 @@
 
 @code {
     [CascadingParameter]
-    private MudDialogInstance MudDialog { get; set; }
+    private IMudDialogInstance MudDialog { get; set; }
 
     [Parameter]
     public string Content { get; set; }
