Added formulas to the result calculations for supports and tray weights

--- a/TraysFastUpdate/Components/Pages/TrayPages/Details.razor
+++ b/TraysFastUpdate/Components/Pages/TrayPages/Details.razor
@@ -82,11 +82,11 @@
             <MudText Typo="Typo.h6" Class="d-flex justify-center flex-grow-1 gap-4">Tray Weight Calculations</MudText>
             <MudCard>
                 <MudCardContent>
-                    <MudTextField @bind-Value="Tray.SupportsCount" For="@(() => Tray.SupportsCount)" Label="Supports count" ReadOnly="true" />
-                    <MudTextField @bind-Value="Tray.SupportsTotalWeight" For="@(() => Tray.SupportsTotalWeight)" Label="Total Supports Weight [kg]" ReadOnly="true" />
-                    <MudTextField @bind-Value="Tray.SupportsWeightLoadPerMeter" For="@(() => Tray.SupportsWeightLoadPerMeter)" Label="Supports weight load per meter [kg/m]" ReadOnly="true" />
-                    <MudTextField @bind-Value="Tray.TrayWeightLoadPerMeter" For="@(() => Tray.TrayWeightLoadPerMeter)" Label="Tray weight load per meter [kg/m]" ReadOnly="true" />
-                    <MudTextField @bind-Value="Tray.TrayOwnWeightLoad" For="@(() => Tray.TotalWeightLoad)" Label="Tray total own weight [kg]" ReadOnly="true" />
+                    <MudTextField @bind-Value="Tray.ResultSupportsCount" For="@(() => Tray.ResultSupportsCount)" Label="Supports count" ReadOnly="true" />
+                    <MudTextField @bind-Value="Tray.ResultSupportsTotalWeight" For="@(() => Tray.ResultSupportsTotalWeight)" Label="Total Supports Weight [kg]" ReadOnly="true" />
+                    <MudTextField @bind-Value="Tray.ResultSupportsWeightLoadPerMeter" For="@(() => Tray.ResultSupportsWeightLoadPerMeter)" Label="Supports weight load per meter [kg/m]" ReadOnly="true" />
+                    <MudTextField @bind-Value="Tray.ResultTrayWeightLoadPerMeter" For="@(() => Tray.ResultTrayWeightLoadPerMeter)" Label="Tray weight load per meter [kg/m]" ReadOnly="true" />
+                    <MudTextField @bind-Value="Tray.ResultTrayOwnWeightLoad" For="@(() => Tray.ResultTrayOwnWeightLoad)" Label="Tray total own weight [kg]" ReadOnly="true" />
                     <MudTextField @bind-Value="Tray.CablesWeightPerMeter" For="@(() => Tray.CablesWeightPerMeter)" Label="Cables weight load per meter [kg/m]" ReadOnly="true" />
                     <MudTextField @bind-Value="Tray.CablesWeightLoad" For="@(() => Tray.CablesWeightLoad)" Label="Cables total weight on the tray [kg]" ReadOnly="true" />
                     <MudTextField @bind-Value="Tray.TotalWeightLoadPerMeter" For="@(() => Tray.TotalWeightLoadPerMeter)" Label="Total tray weight load per meter [kg/m]" ReadOnly="true" />
