--- a/TraysFastUpdate/Components/Pages/TrayPages/Details.razor
+++ b/TraysFastUpdate/Components/Pages/TrayPages/Details.razor
@@ -87,10 +87,10 @@
                     <MudTextField @bind-Value="Tray.ResultSupportsWeightLoadPerMeter" For="@(() => Tray.ResultSupportsWeightLoadPerMeter)" Label="Supports weight load per meter [kg/m]" ReadOnly="true" />
                     <MudTextField @bind-Value="Tray.ResultTrayWeightLoadPerMeter" For="@(() => Tray.ResultTrayWeightLoadPerMeter)" Label="Tray weight load per meter [kg/m]" ReadOnly="true" />
                     <MudTextField @bind-Value="Tray.ResultTrayOwnWeightLoad" For="@(() => Tray.ResultTrayOwnWeightLoad)" Label="Tray total own weight [kg]" ReadOnly="true" />
-                    <MudTextField @bind-Value="Tray.CablesWeightPerMeter" For="@(() => Tray.CablesWeightPerMeter)" Label="Cables weight load per meter [kg/m]" ReadOnly="true" />
-                    <MudTextField @bind-Value="Tray.CablesWeightLoad" For="@(() => Tray.CablesWeightLoad)" Label="Cables total weight on the tray [kg]" ReadOnly="true" />
-                    <MudTextField @bind-Value="Tray.TotalWeightLoadPerMeter" For="@(() => Tray.TotalWeightLoadPerMeter)" Label="Total tray weight load per meter [kg/m]" ReadOnly="true" />
-                    <MudTextField @bind-Value="Tray.TotalWeightLoad" For="@(() => Tray.TotalWeightLoad)" Label="Total tray weight [kg]" ReadOnly="true" />
+                    <MudTextField @bind-Value="Tray.ResultCablesWeightPerMeter" For="@(() => Tray.ResultCablesWeightPerMeter)" AutoGrow Label="Cables weight load per meter [kg/m]" ReadOnly="true" />
+                    <MudTextField @bind-Value="Tray.ResultCablesWeightLoad" For="@(() => Tray.ResultCablesWeightLoad)" Label="Cables total weight on the tray [kg]" ReadOnly="true" />
+                    <MudTextField @bind-Value="Tray.ResultTotalWeightLoadPerMeter" For="@(() => Tray.ResultTotalWeightLoadPerMeter)" Label="Total tray weight load per meter [kg/m]" ReadOnly="true" />
+                    <MudTextField @bind-Value="Tray.ResultTotalWeightLoad" For="@(() => Tray.ResultTotalWeightLoad)" Label="Total tray weight [kg]" ReadOnly="true" />
                 </MudCardContent>
             </MudCard>
         </MudItem>
@@ -103,8 +103,8 @@
             <MudText Typo="Typo.h6" Class="d-flex justify-center flex-grow-1 gap-4">Tray Space Calculations</MudText>
             <MudCard>
                 <MudCardContent>
-                    <MudTextField @bind-Value="Tray.SpaceOccupied" For="@(() => Tray.SpaceOccupied)" Label="Space occupied by cables [mm]" ReadOnly="true" />
-                    <MudTextField @bind-Value="Tray.SpaceAvailable" For="@(() => Tray.SpaceAvailable)" Label="Cable tray free space [%]" ReadOnly="true" />
+                    <MudTextField @bind-Value="Tray.ResultSpaceOccupied" For="@(() => Tray.ResultSpaceOccupied)" AutoGrow Label="Space occupied by cables [mm]" ReadOnly="true" />
+                    <MudTextField @bind-Value="Tray.ResultSpaceAvailable" For="@(() => Tray.ResultSpaceAvailable)" Label="Cable tray free space [%]" ReadOnly="true" />
                 </MudCardContent>
             </MudCard>
         </MudItem>
