--- a/TraysFastUpdate/Components/Pages/TrayPages/Details.razor
+++ b/TraysFastUpdate/Components/Pages/TrayPages/Details.razor
@@ -229,7 +229,7 @@
 
                 double leftStartX = 50 + spacing;
                 double rightStartX = 50 + Tray.Width * canvasScale - spacing;
-                double bottomStartY = 50 + (Tray.Height - CProfileHeight) * canvasScale - spacing;
+                double bottomStartY = 50 + (Tray.Height - CProfileHeight) * canvasScale;
 
                 var bundles = CableBundles;
 
@@ -271,7 +271,7 @@
                                     await ctx.TextBaseLineAsync(TextBaseLine.Middle);
                                     int cableNumber = CablesOnTray.IndexOf(cable) + 1;
                                     await ctx.FillTextAsync(cableNumber.ToString(), leftStartX + radius, bottomStartY - radius);
-                                    bottomStartY = 50 + (Tray.Height - CProfileHeight) * canvasScale - spacing;
+                                    bottomStartY = 50 + (Tray.Height - CProfileHeight) * canvasScale;
 
                                     if (row == 0)
                                     {
@@ -283,7 +283,7 @@
                                     {
                                         row = 0;
                                         leftStartX = 50 + spacing + BottomRowPowerCables.Sum(x => x.CableType.Diameter + 1) * canvasScale;
-                                        bottomStartY = 50 + (Tray.Height - CProfileHeight) * canvasScale - spacing;
+                                        bottomStartY = 50 + (Tray.Height - CProfileHeight) * canvasScale;
                                     }
                                 }
 
@@ -317,13 +317,13 @@
                                         row = 0;
                                         column++;
                                         leftStartX = 50 + spacing + BottomRowPowerCables.Sum(x => x.CableType.Diameter + 1) * canvasScale;
-                                        bottomStartY = 50 + (Tray.Height - CProfileHeight) * canvasScale - spacing;
+                                        bottomStartY = 50 + (Tray.Height - CProfileHeight) * canvasScale;
                                     }
                                 }
                             }
 
                             leftStartX = 50 + spacing + BottomRowPowerCables.Sum(x => x.CableType.Diameter + 1) * canvasScale;
-                            bottomStartY = 50 + (Tray.Height - CProfileHeight) * canvasScale - spacing;
+                            bottomStartY = 50 + (Tray.Height - CProfileHeight) * canvasScale;
                         }
                     }
 
@@ -365,11 +365,11 @@
                                 {
                                     row = 0;
                                     rightStartX = 50 + Tray.Width * canvasScale - spacing - BottomRowControlCables.Sum(x => x.CableType.Diameter + 1) * canvasScale;
-                                    bottomStartY = 50 + (Tray.Height - CProfileHeight) * canvasScale - spacing;
+                                    bottomStartY = 50 + (Tray.Height - CProfileHeight) * canvasScale;
                                 }
                             }
                             rightStartX = 50 + Tray.Width * canvasScale - spacing - BottomRowControlCables.Sum(x => x.CableType.Diameter + 1) * canvasScale;
-                            bottomStartY = 50 + (Tray.Height - CProfileHeight) * canvasScale - spacing;
+                            bottomStartY = 50 + (Tray.Height - CProfileHeight) * canvasScale;
                         }
                     }
                     else if (bundle.Key == "MV")
@@ -396,7 +396,7 @@
                             {
                                 if (cableIndex == sortedCables.IndexOf(cable))
                                 {
-                                    bottomStartY -= ((cable.CableType.Diameter * canvasScale) / 2) * (Math.Sqrt(3) / 2) + ((cable.CableType.Diameter * canvasScale) / 2) - spacing * 2;
+                                    bottomStartY -= ((cable.CableType.Diameter * canvasScale) / 2) * (Math.Sqrt(3) / 2) + ((cable.CableType.Diameter * canvasScale) / 2 - spacing * 2);
                                     leftStartX = leftStartTop;
                                     row = 1;
                                     cableIndex += 3;
@@ -413,7 +413,7 @@
                                 await ctx.TextBaseLineAsync(TextBaseLine.Middle);
                                 int cableNumber = CablesOnTray.IndexOf(cable) + 1;
                                 await ctx.FillTextAsync(cableNumber.ToString(), leftStartX + radius, bottomStartY - radius);
-                                bottomStartY = 50 + (Tray.Height - CProfileHeight) * canvasScale - spacing;
+                                bottomStartY = 50 + (Tray.Height - CProfileHeight) * canvasScale;
 
                                 if (row == 0)
                                 {
@@ -428,7 +428,7 @@
                                     leftStartBottom += (cable.CableType.Diameter + 1) * canvasScale * 2;
                                     leftStartX = leftStartBottom;
                                     leftStartTop += (cable.CableType.Diameter + 1) * canvasScale * 4;
-                                    bottomStartY = 50 + (Tray.Height - CProfileHeight) * canvasScale - spacing;
+                                    bottomStartY = 50 + (Tray.Height - CProfileHeight) * canvasScale;
                                 }
                             }
                         }
@@ -450,12 +450,12 @@
 
         if (purpose == "Power")
         {
-            rows = Math.Min((int)Math.Floor((trayHeight - spacing) / (diameter + spacing)), 3);
+            rows = Math.Min((int)Math.Floor((trayHeight) / (diameter + spacing)), 3);
             columns = (int)Math.Floor((double)bundle.Count / rows);
         }
         else if (purpose == "Control")
         {
-            rows = Math.Min((int)Math.Floor((trayHeight - spacing) / (diameter + spacing)), 7);
+            rows = Math.Min((int)Math.Floor((trayHeight) / (diameter + spacing)), 7);
             columns = Math.Min((int)Math.Ceiling((double)bundle.Count / rows), 20);
         }
 
