Cables with diameter above 45cm are not going outside the trays

--- a/TraysFastUpdate/Components/Pages/CablePages/Index.razor
+++ b/TraysFastUpdate/Components/Pages/CablePages/Index.razor
@@ -17,16 +17,16 @@
 
 <MudItem Class="d-flex justify-center align-stretch flex-grow-1 gap-4">
     <MudButton Href="/cables/create"
-               Rel="nofollow"
-               Variant="Variant.Filled"
-               Color="Color.Primary">
+    Rel="nofollow"
+    Variant="Variant.Filled"
+    Color="Color.Primary">
         Add cable
     </MudButton>
     <MudFileUpload @ref="@_fileUpload" T="IBrowserFile" OnFilesChanged="UploadFile" Accept=".xlsx">
         <ActivatorContent>
             <MudButton Variant="Variant.Filled"
-                       Color="Color.Primary"
-                       StartIcon="@Icons.Material.Filled.CloudUpload">
+            Color="Color.Primary"
+            StartIcon="@Icons.Material.Filled.CloudUpload">
                 Add cable from file
             </MudButton>
         </ActivatorContent>
@@ -41,7 +41,7 @@
     else
     {
         <MudDataGrid T="Cable" Items="@Elements" ReadOnly="false" EditMode="DataGridEditMode.Cell"
-                     Bordered="true" Dense="true" EditTrigger="DataGridEditTrigger.OnRowClick" Filterable="true" FilterMode="@DataGridFilterMode.ColumnFilterMenu" Virtualize="true" FixedHeader="true" CommittedItemChanges="@CommittedItemChanges" ColumnResizeMode="ResizeMode.Column">
+        Bordered="true" Dense="true" EditTrigger="DataGridEditTrigger.OnRowClick" Filterable="true" FilterMode="@DataGridFilterMode.ColumnFilterMenu" Virtualize="true" FixedHeader="true" CommittedItemChanges="@CommittedItemChanges" ColumnResizeMode="ResizeMode.Column">
             <Columns>
                 <PropertyColumn Property="x => x.Tag" Title="Cable Tag" Hideable="false" />
                 <PropertyColumn Property="x => x.CableType.Type" Title="Cable Type" Hideable="false">
@@ -131,6 +131,7 @@
         try
         {
             await CableService.UploadFromFileAsync(e.File);
+            Snackbar.Add("Upload of cables from file succesful!", Severity.Success);
         }
         catch (Exception)
         {
